--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "dependencies": {
     "compression": "^1.0.2",
     "express": "^4.2.0",
-    "jade": "^1.3.1"
+    "inherits": "^2.0.1",
+    "jade": "^1.3.1",
+    "mustache": "^0.8.1",
+    "once": "^1.3.0",
+    "run-parallel": "^1.0.0",
+    "run-series": "^1.0.2"
   },
   "devDependencies": {
     "browserify": "^4.1.3",
@@ -19,7 +24,7 @@
     "build": "npm run build-css && npm run build-js",
     "build-css": "stylus -u nib css/main.styl -o static/ -c",
     "build-js": "browserify --debug js/main.js > static/bundle.js",
-    "watch": "npm run watch-css & npm run watch-js & nodemon app.js -e js,jade -i node_modules/",
+    "watch": "npm run watch-css & npm run watch-js & nodemon index.js -e js,jade -i node_modules/ -q",
     "watch-css": "stylus -u nib css/main.styl -o static/ -w",
     "watch-js": "watchify js/main.js -o static/bundle.js -dv"
   }
