--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "music",
   "version": "0.0.1",
   "dependencies": {
+    "brfs": "^1.1.1",
     "compression": "^1.0.2",
+    "domready": "^1.0.5",
     "express": "^4.2.0",
     "inherits": "^2.0.1",
     "jade": "^1.3.1",
     "mustache": "^0.8.1",
     "once": "^1.3.0",
+    "run-auto": "^1.0.0",
     "run-parallel": "^1.0.0",
     "run-series": "^1.0.2"
   },
@@ -23,7 +26,7 @@
     "start": "node index.js",
     "build": "npm run build-css && npm run build-js",
     "build-css": "stylus -u nib css/main.styl -o static/ -c",
-    "build-js": "browserify --debug js/main.js > static/bundle.js",
+    "build-js": "browserify -t brfs --debug js/main.js > static/bundle.js",
     "watch": "npm run watch-css & npm run watch-js & nodemon index.js -e js,jade -i node_modules/ -q",
     "watch-css": "stylus -u nib css/main.styl -o static/ -w",
     "watch-js": "watchify js/main.js -o static/bundle.js -dv"
