--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "compression": "^1.0.2",
     "domready": "^1.0.5",
     "express": "^4.2.0",
+    "extend.js": "0.0.1",
     "inherits": "^2.0.1",
     "jade": "^1.3.1",
+    "jquery": "^2.1.1",
     "mustache": "^0.8.1",
     "once": "^1.3.0",
     "run-auto": "^1.0.0",
     "run-parallel": "^1.0.0",
-    "run-series": "^1.0.2"
+    "run-series": "^1.0.2",
+    "velocity-animate": "0.0.10"
   },
   "devDependencies": {
     "browserify": "^4.1.3",
