--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "inherits": "^2.0.1",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
+    "lodash.throttle": "^2.4.1",
     "mustache": "^0.8.1",
     "once": "^1.3.0",
     "run-auto": "^1.0.0",
