--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "music",
   "version": "0.0.1",
+  "browser": {
+    "keymaster": "./node_modules/keymaster/keymaster.js"
+  },
+  "browserify": {
+     "transform": [
+       "browserify-shim",
+       "brfs"
+     ]
+   },
+   "browserify-shim": {
+     "keymaster": "key"
+   },
   "dependencies": {
     "brfs": "^1.1.1",
+    "browserify-shim": "^3.5.0",
     "compression": "^1.0.2",
     "domready": "^1.0.5",
     "express": "^4.2.0",
@@ -11,6 +24,7 @@
     "inherits": "^2.0.1",
     "jade": "^1.3.1",
     "jquery": "^2.1.1",
+    "keymaster": "git://github.com/madrobby/keymaster.git",
     "lodash.throttle": "^2.4.1",
     "mustache": "^0.8.1",
     "once": "^1.3.0",
@@ -31,9 +45,9 @@
     "start": "node index.js",
     "build": "npm run build-css && npm run build-js",
     "build-css": "stylus -u nib css/main.styl -o static/ -c",
-    "build-js": "browserify js/main.js -t brfs --debug > static/bundle.js",
+    "build-js": "browserify js/main.js --debug > static/bundle.js",
     "watch": "npm run watch-css & npm run watch-js & nodemon index.js -e js,jade -i node_modules/ -q",
     "watch-css": "stylus -u nib css/main.styl -o static/ -w",
-    "watch-js": "watchify js/main.js -t brfs -o static/bundle.js -dv"
+    "watch-js": "watchify js/main.js -o static/bundle.js -dv"
   }
 }
