update nginc conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+upstream music-frontends {
+    server 127.0.0.1:3000;
+}
+
 server {
     listen      50.116.11.184:80;
     server_name music.feross.net;
@@ -5,11 +9,22 @@ server {
     # Allow file uploads
     client_max_body_size 50M;
 
-    root /home/feross/www/music/static;
+    root /home/feross/www/music.feross.net/static;
     index index.html;
 
     # Try to serve static files
-    try_files $uri $uri/ =404;
+    try_files $uri $uri/ @node;
+
+    # If there is no static file, send it to Tornado
+    location @node {
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://music-frontends;
+    }
+
 }
 
 server {
